Fix spacing issues for card buttons

--- a/client/src/theme/components/_cards.scss
+++ b/client/src/theme/components/_cards.scss
@@ -58,7 +58,7 @@ ion-card ion-card-header {
   position: relative;
   padding: $gutter;
   width: 50%;
-  flex: 1 auto;
+  margin: 0;
   background-color: white;
   text-align: left;
   transition: $transition;
